# The-Mighty-Todolist-Telegram-Bot

./: .gitignore  README.md  bot.py  pre-commit  pyproject.toml
.github/workflows/: main.yml
app/: bot.py
tests/: test_add_task.py  test_bot.py  test_delete_task.py  test_help_command.py  test_init.py  test_list_tasks.py  test_main.py  test_mark_completed.py  test_notify_due_tasks.py  test_start_command.py
