[tool.poetry]
name = "the-mighty-todolist-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Murhaf Alawir <94635412+thecarrot123@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^21.1.1"
pytest = "^8.1.1"
bandit = "^1.7.8"
flake8 = "^7.0.0"
schedule = "^1.2.1"
autopep8 = "^2.1.0"
black = "^24.4.2"
isort = "^5.13.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
